--- a/client/src/css/StudentProfile.css
+++ b/client/src/css/StudentProfile.css
@@ -39,11 +39,18 @@
 }
 
 /* Heatmap Calendar Dark Theme */
-.react-calendar-heatmap .color-github-0 { fill: #2d333b; }
+/* .react-calendar-heatmap .color-github-0 { fill: #2d333b; }
 .react-calendar-heatmap .color-github-1 { fill: #0e4429; }
 .react-calendar-heatmap .color-github-2 { fill: #006d32; }
 .react-calendar-heatmap .color-github-3 { fill: #26a641; }
 .react-calendar-heatmap .color-github-4 { fill: #39d353; }
+.react-calendar-heatmap text { fill: #8892b0; } */
+
+.react-calendar-heatmap .color-github-0 { fill: #2d333b; }
+.react-calendar-heatmap .color-github-1 { fill: #9be9a8; }
+.react-calendar-heatmap .color-github-2 { fill: #40c463; }
+.react-calendar-heatmap .color-github-3 { fill: #30a14e; }
+.react-calendar-heatmap .color-github-4 { fill: #216e39; }
 .react-calendar-heatmap text { fill: #8892b0; }
 
 .recharts-tooltip-wrapper {
